implementation of measurement app

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,68 @@
-# Ignore the virtual environment
-.venv/
-venv/
-
-# Ignore database files
-db.sqlite3
-
-# Ignore compiled Python files
+# Python bytecode
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
 
-# Ignore log files
+# Django
 *.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
 
-# Ignore system files
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+coverage.xml
+*.cover
+
+# Virtual environments
+virtual/
+venv/
+env/
+ENV/
+.env
+.venv
+env.bak/
+venv.bak/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Django collected static files
+staticfiles/
+
+# Secret files with API keys, passwords, etc.
+.env
+secrets.json
+credentials.json
+
+# Database backups
+*.dump
+*.sql
+
+# Local development settings
+dev_settings.py
+
+# OS specific
 .DS_Store
 Thumbs.db
 
+# Project-specific custom folders
+# Add your custom paths here
+private_data/
+internal_docs/
+temp_uploads/
